# medgarant_test

./: README.md  pyproject.toml  run.py  run_main.py
medgarant_fastapi_test/api/: __init__.py
medgarant_fastapi_test/api/v_1/: get_times_router.py  index_router.py
medgarant_fastapi_test/services/: __init__.py  data.py  get_free_times.py
tests/: test_api.py  test_get_free_times.py
